# pixel

./: .gitignore  .gitmodules  .installer.sh  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.installer/: host.sh
pico-devel/: CMakeLists.txt
pico-devel/pixlab/: CMakeLists.txt
pico-devel/pixlab/hub75/: CMakeLists.txt
pico-devel/pixlab/hub75/examples/: main.cpp
pico-devel/pixlab/hub75/include/hub75/: config.hpp  driver.hpp  gpio_panel.hpp  panel.hpp  pio_panel.hpp  pulser.hpp  pulser.pio  pulser.pio.h  renderer.hpp  renderer.pio  renderer.pio.h  shifter.hpp  shifter.pio  shifter.pio.h
pico-devel/pixlab/hub75/include/hub75/renderer/: pixshifter.hpp  pixshifter.pio  pixshifter.pio.h  renderer.hpp
pico-devel/pixlab/ws2812/: CMakeLists.txt
pico-devel/pixlab/ws2812/examples/: main.cpp
pico-devel/pixutils/: CMakeLists.txt
pico-devel/pixutils/include/pixutils/: buffer.hpp  config.hpp  estimator.hpp  gpio.hpp  logger.hpp  matrix.hpp  system.hpp  time.hpp  types.hpp  uuid.hpp  watch.hpp
pico-devel/pixutils/include/pixutils/device/: device.hpp  dma.hpp  gpio.hpp  pio.hpp  pwm.hpp  spi.hpp
pico-devel/pixutils/include/pixutils/device/pio/: handler.hpp  machine.hpp  program.hpp
pico-devel/pixutils/include/pixutils/math/: estimator.hpp  matrix.hpp
pico-devel/pixutils/include/pixutils/memory/: buffer.hpp
pico-devel/pixutils/include/pixutils/system/: logger.hpp  system.hpp
pico-devel/pixutils/include/pixutils/time/: time.hpp  watch.hpp
pixtools/: CMakeLists.txt
pixtools/include/: config.hpp  logger.hpp  system.hpp  types.hpp
pixtools/include/utils/: buffer.hpp  color.hpp  estimator.hpp  matrix.hpp  time.hpp  watch.hpp
platform/pico/: CMakeLists.txt
platform/pico/pico-devel/: CMakeLists.txt
platform/pico/pico-devel/modules/hub75/: CMakeLists.txt
platform/pico/pico-devel/modules/hub75/examples/: main.cpp
platform/pico/pico-devel/modules/hub75/include/hub75/: driver.hpp  driver.pio  driver.pio.h  gpio.hpp  panel.hpp  pixel.hpp  pulser.hpp  pulser.pio.h  shifter.hpp  shifter.pio  shifter.pio.h
platform/pico/pico-devel/modules/ws2812/: config.hpp
platform/pico/pico-devel/modules/ws2812/controller/: bcm.hpp  pio.hpp
platform/pico/pico-devel/pixutils/: CMakeLists.txt
platform/pico/pico-devel/pixutils/include/pixutils/: color.hpp  types.hpp
platform/pico/pico-devel/pixutils/include/pixutils/device/: device.hpp  dma.hpp  pio.hpp  spi.hpp
platform/pico/pico-devel/pixutils/include/pixutils/math/: estimator.hpp  math.hpp  matrix.hpp
platform/pico/pico-devel/pixutils/include/pixutils/memory/: buffer.hpp
platform/pico/pico-devel/pixutils/include/pixutils/system/: config.hpp  logger.hpp  system.hpp
platform/pico/pico-devel/pixutils/include/pixutils/time/: time.hpp  watch.hpp
platform/unix/engine/: CMakeLists.txt  engine.hpp  main.cpp
platform/unix/engine/io/: display.hpp  file.hpp  logger.hpp
rp2040/: CMakeLists.txt
rp2040/pico-devel/: CMakeLists.txt
rp2040/pico-devel/hub75/: CMakeLists.txt  config.hpp
rp2040/pico-devel/hub75/examples/: main.cpp
rp2040/pico-devel/picoutils/dev/: device.hpp  dma.hpp  spi.hpp
rp2040/pico-devel/ws2812/: CMakeLists.txt  driver.hpp  types.hpp
rp2040/pico-devel/ws2812/controller/: pio.hpp
rp2040/pico-devel/ws2812/pio/: io.pio  io.pio.h
rp27XX/engine/: app.hpp  types.hpp
rp27XX/engine/shaders/: compile.sh
rp27XX/hub75/: CMakeLists.txt
rp27XX/hub75/examples/: demo.cpp
rp27XX/hub75/include/: buffer.hpp  gpio.hpp  matrix.hpp  memory.hpp  register.hpp  system.hpp
rp27XX/hub75/include/utils/: estimator.hpp  logger.hpp  time.hpp  watch.hpp
rp27XX/hub75/lib/: matrix.cpp
settings/: install.sh
settings/vscode/: launch.json  settings.json
